[metadata]
name = ec2-api
version = 2014.2.1
summary = OpenStack Ec2api Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    ec2api
scripts =
    bin/ec2api-db-setup

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    ec2-api=ec2api.cmd.api:main
    ec2-api-manage=ec2api.cmd.manage:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = ec2api/locale
domain = ec2api

[update_catalog]
domain = ec2api
output_dir = ec2api/locale
input_file = ec2api/locale/ec2api.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ec2api/locale/ec2api.pot

[nosetests]
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
verbosity=2
tests=ec2api/tests
cover-package = ec2api
cover-html = true
cover-erase = true
