[metadata]
name = ec2-api
version = 2.0.0
summary = OpenStack Ec2api Service
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/ec2-api
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    ec2api

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    ec2api = ec2api.opts:list_opts
    ec2api.api = ec2api.api.opts:list_opts
    ec2api.metadata = ec2api.metadata.opts:list_opts
    ec2api.s3 = ec2api.s3.opts:list_opts

console_scripts =
    ec2-api=ec2api.cmd.api:main
    ec2-api-manage=ec2api.cmd.manage:main
    ec2-api-metadata=ec2api.cmd.api_metadata:main
    ec2-api-s3=ec2api.cmd.api_s3:main

tempest.test_plugins =
    aws_tests = ec2api.tests.functional.plugin:AWSTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = ec2api/locale
domain = ec2api

[update_catalog]
domain = ec2api
output_dir = ec2api/locale
input_file = ec2api/locale/ec2api.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ec2api/locale/ec2api.pot
